--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -36,13 +36,53 @@
 			</div>
 		</div>
 	</nav>
-	<section class="container mt-5">
+	<section class="container mt-5" id="home">	<!-- 메인 섹션 영역 -->
 		<div class="text-center">
 			<img src="./img/cat4.jpg" class="img-fluid mb-3 rounded-circle"/>
 			<h2>남우경</h2>
 			<img src="./img/activity.svg" class="img-fluid mr-1"><span class="mr-2">프로그래머</span>
 			<img src="./img/battery.svg" class="img-fluid mr-1"><span class="mr-2">고양이</span>
 			<img src="./img/box.svg" class="img-fluid mr-1"><span>집사</span>
+		</div>
+	</section>
+	<section class="bg-white text-dark mt-5 mb-3 pt-5 pb-4" id="career">	<!-- 경력 섹션 영역 -->
+		<div class="row justify-content-center">
+			<div class="col-4 text-left mb-5" style="max-width:480px;">
+				<h2>보유 자격증</h2>
+					<ul class="mt-5">
+						<li class="mt-4">워드프로세서</li>
+						<li class="mt-4">문서실무사</li>
+						<li class="mt-4"></li>
+					</ul>
+				</div>
+			<div class="container text-left mb-5" style="max-width:480px;">
+				<h2>활용 능력</h2>
+				<ul class="mt-5">
+					<li class="mt-4">HTML5</li>
+					<li class="mt-4">자바스크립트</li>
+					<li class="mt-4">부트스트랩 프레임워크</li>
+					<li>CSS3</li>
+					<li>JQuery</li>
+					<li>JAVA</li>
+					<li>JSP</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section class="mb-3 pt-4 pb-5">	<!-- 포트폴리오 섹션 영역 -->
+		<div class="text-center">
+			<h2>포트폴리오</h2>
+		</div>
+		<div class="container mt-3" style="max-width:920px;">
+			<div class="card-deck">
+				<div class="card">
+					<img class="card-img-top" src="./img/cat4.jpg" />
+					<div class="card-body">
+						<h4 class="card-title">포트폴리오01</h4>
+						<p class="card-text" style="text-align:justify">포트폴리오01의 설명</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
